--- a/example.html
+++ b/example.html
@@ -341,28 +341,28 @@
     <div class="row row-cols-2 row-cols-lg-4 my-5">
         <div class="col">
             <div class="callout callout-magic">
-                <h4 class="callout-title">magic Callout</h4>
+                <h4 class="callout-text">magic Callout</h4>
                 Callout Text and <a href="" class="callout-link">link</a>
                 <hr>
             </div>
         </div>
         <div class="col">
             <div class="callout callout-juice">
-                <h4 class="callout-title">juice Callout</h4>
+                <h4 class="callout-text">juice Callout</h4>
                 Callout Text and <a href="" class="callout-link">link</a>
                 <hr>
             </div>
         </div>
         <div class="col">
             <div class="callout callout-ocean">
-                <h4 class="callout-title">ocean Callout</h4>
+                <h4 class="callout-text">ocean Callout</h4>
                 Callout Text and <a href="" class="callout-link">link</a>
                 <hr>
             </div>
         </div>
         <div class="col">
             <div class="callout callout-cake">
-                <h4 class="callout-title">cake Callout</h4>
+                <h4 class="callout-text">cake Callout</h4>
                 Callout Text and <a href="" class="callout-link">link</a>
                 <hr>
             </div>
